Fixes for List command